Change font from Cairo to Montserrat

--- a/BookWorm/Info.plist
+++ b/BookWorm/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Montserrat-Thin.ttf</string>
+		<string>Montserrat-ExtraLight.ttf</string>
+		<string>Montserrat-Regular.ttf</string>
+		<string>Montserrat-Light.ttf</string>
 		<string>Cairo-Light.ttf</string>
 		<string>Cairo.ttf</string>
 	</array>
